src/Apttus Contract Management/objects/MergeEventDetail__c.object
<CustomObject>
    <description>Holds document merge event details</description>
    <fields>
        <fullName>DocumentVersionDetail2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document version detail received from the reviewer</description>
        <inlineHelpText>The document version detail received from the reviewer</inlineHelpText>
        <label>Received Version Detail</label>
        <referenceTo>DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Merge Event Details (Received)</relationshipLabel>
        <relationshipName>Merge_Event_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentVersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document version detail sent to the reviewer</description>
        <inlineHelpText>The document version detail sent to the reviewer</inlineHelpText>
        <label>Sent Version Detail</label>
        <referenceTo>DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Merge Event Details (Sent)</relationshipLabel>
        <relationshipName>Merge_Event_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MergeEventId__c</fullName>
        <description>Id of the merge event this is associated with</description>
        <inlineHelpText>Id of the merge event this is associated with</inlineHelpText>
        <label>Merge Event</label>
        <referenceTo>MergeEvent__c</referenceTo>
        <relationshipLabel>Merge Event Details</relationshipLabel>
        <relationshipName>Merge_Event_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewEndTime__c</fullName>
        <description>The review end time</description>
        <inlineHelpText>The review end time</inlineHelpText>
        <label>Review End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReviewStartTime__c</fullName>
        <description>The review start time</description>
        <inlineHelpText>The review start time</inlineHelpText>
        <label>Review Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <description>The reviewer&apos;s email address</description>
        <inlineHelpText>The reviewer&apos;s email address</inlineHelpText>
        <label>Reviewer Email</label>
        <type>Email</type>
    </fields>
    <label>Merge Event Detail</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Event Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>